codex-rs/tui/src/snapshots/codex_tui__account_picker__tests__account_picker_disabled_current_default.snap
---
source: tui/src/account_picker_tests.rs
expression: terminal.backend()
---

  Choose account

› 1. first@example.com (default)  5h  50% (Jul 10 17:00Z)    Weekly  12% (Jul 14)
  2. best@example.com             5h  72% (Jul 10 18:00Z)    Weekly  84%
  3. unknown@example.com          5h unknown    Weekly unknown



  Auto-selects in 15s
